--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.conatiner {
+  width: 500px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: auto;
+  margin-top: 5rem;
+  border-radius: 10px;
+  background-color: #bfcdda;
+
 }
 
-.App-link {
-  color: #61dafb;
+.Contact-details {
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  background-color: #bfcdda;
+  border-radius: 10px;
+  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+  width: 500px;
+  height: 600px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input1 {
+  margin-bottom: 15px;
+  border-style: none;
+  background: transparent;
+  padding: 10px;
+  width: 300px;
+
+  outline: 2px ridge rgba(18, 16, 18, 0.6);
+  border-radius: 1rem;
+}
+
+.input2 {
+  margin-bottom: 15px;
+  background: transparent;
+  border-style: none;
+  width: 300px;
+  padding: 10px;
+  outline: 2px ridge rgba(18, 16, 18, 0.6);
+  border-radius: 1rem;
+
+}
+
+.input3 {
+  margin-bottom: 15px;
+  border-style: none;
+  padding: 10px;
+  width: 300px;
+
+  background: transparent;
+  outline: 2px ridge rgba(18, 16, 18, 0.6);
+  border-radius: 1rem;
+}
+
+.details h2 {
+  padding: 50px;
+  margin-top: 100px;
 }
